# pasathai

./: README.md  app.py  deck.json  pyproject.toml  setup.py
seapitch/: app.py  index.html  tone.html
thaibow/: app.py  requirements.txt  setup.py
thaibow/thaibow/: app.py  cli.py  deck.py  model.py  schema.json  validator.py
thaibow/thaibow/data/: กรกฎาคม.json  กระเป๋า.json  กรุงเทพ.json  กอล์ฟ.json  กันยายน.json  กับ.json  กาแฟ.json  กำลัง.json  กิน.json  กุมภาพันธ์.json  ก็โอเค.json  ก่อน.json  ขอ.json  ขอบคุณ.json  ขอโทษ.json  ขอให้สนุก.json  ข้าว.json  คน.json  ครับ.json  ครู.json  ความสุข.json  คอมพิวเตอร์.json  คะ.json  คาเฟ่.json  คำ.json  คำถาม.json  งาน.json  จน.json  จริงหรอ.json  จริงๆ.json  จอด.json  จะ.json  จีน.json  ชอบ.json  ชอปปิ้ง.json  ชา.json  ชื่ออะไร.json  ชื่อเล่น.json  ชู.json  ซื้อ.json  (+195 more)
thaitoroman/: app.py  cli.py
