[project]
name = "thai2roman"
version = "0.1.0"
description = "turn natural thai, identify thai syllabes in said input, and transliterate the syllables such that they can colored by tone in ANKI"
authors = [
    {name = "haiturtle", email = "33427880+dethereum@users.noreply.github.com"},
]
dependencies = []
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"
